--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,96 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
+  background-color: #e14647;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h2 {
+  background-color: #e14647;
+  padding: 18px;
+  color: #fff;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.App {
+  width: 80%;
+  margin: 100px auto;
+  padding: 30px;
+  background-color: #fff;
+  box-shadow: 1px 2px 5px #eee;
+  border-radius: 5px;
+}
+
+input {
+  width: 80%;
+  border: 0;
+  outline: none;
+  padding: 6px 10px;
+  background-color: #eee;
+}
+
+button {
+  width: 20%;
+  padding: 6px 0;
+  margin: 0;
+  border: 0;
+  outline: 0;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+  background-color: #4dc55b;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  margin: 15px 0;
+}
+
+li span {
+  display: inline-block;
+  width: 60%;
+  color: rgb(49, 49, 49);
+  font-size: 17px;
+}
+
+li > button:first-of-type {
+  background-color: rgb(0, 87, 175);
+  color: #fff;
+  margin-right: 1%;
+  width: 19%;
+}
+
+li > button:last-of-type {
+  background-color: rgba(255, 0, 30, 0.857);
+  color: #fff;
+}
+
+ul > form{
+  margin: 15px 0;
+}
+
+.update-btn {
+  background-color: #ff2600;
+}
+
+p {
+  width: 50%;
+  margin: 10px auto;
+  padding: 5px 0;
+  background-color: #e14647;
+  color: #fff;
+  border-radius: 5px;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
 }
